<resources>
    <string name="app_name">Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo_list">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_title_create_todo">Create a Task</string>
    <string name="txt_label_confirm">Confirm</string>
    <string name="txt_label_name">Name</string>
    <string name="txt_label_description">Description</string>
    <string name="txt_add_todo_item">Add New Todo Item</string>
    <string name="label_date_mask">dd/mm/yyyy</string>
    <string name="txt_description_label">Description</string>
    <string name="txt_sub_todos_label">Sub Tasks</string>
    <string name="txt_add">add</string>
    <string name="txt_delete_sub_item_description">Delete Sub Item</string>
    <string name="txt_end_date_label">End date</string>
    <string name="txt_new_sub_todo_label">New Sub Task</string>
    <string name="on_going_sub_to_do_label">On Going Sub Tasks</string>
    <string name="txt_title_edit_todo">Edit Task</string>
    <string name="txt_menu_label">menu</string>
    <string name="txt_main_fragment_menu_description">Open menu</string>
    <string name="txt_search_label">Search</string>
    <string name="search_on_main_description">Search task on main menu</string>
    <string name="txt_no_description">No Description</string>
    <string name="txt_edit_label">Edit</string>
    <string name="txt_delete_label">Delete</string>
    <string name="txt_confirmation">Are you sure?</string>
    <string name="label_due_date">Due date</string>
    <string name="txt_no_hour_selected">No hour selected</string>
    <string name="txt_erase">Erase</string>

    <string name="txt_sub_task_progress">%1$d/%2$d Sub Tasks</string>

    <string name="txt_today">Today</string>
    <string name="txt_add_sub_task">Add Sub Task</string>
    <plurals name="number_of_days_positive">
        <item quantity="one">1 day left</item>
        <item quantity="other">%1$d days left</item>
    </plurals>

    <plurals name="number_of_days_negative">
        <item quantity="one">1 day has passed</item>
        <item quantity="other">%1$d days has passed</item>
    </plurals>

    <string name="err_task_name">Task should have a name</string>
    <string name="err_task_date">Invalid date.\nIt should be in \'dd/mm/yyyy\' format.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_history">History</string>
    <string name="search_on_history_description">Search task on history screen</string>
    <string name="txt_history_description">Tasks History</string>
</resources>