<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/main_menu_search"
            android:title="@string/txt_search_label"
            android:icon="@drawable/baseline_search_24"
            android:contentDescription="@string/search_on_main_description"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.widget.SearchView" />

    <item
            android:id="@+id/main_menu_history"
            android:title="@string/txt_history"
            android:icon="@drawable/baseline_history_24"
            android:contentDescription="@string/txt_history_description"
            app:showAsAction="collapseActionView|ifRoom"
            />

</menu>