<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="todoItem"
                type="dev.vinicius.todoapp.domain.dto.TodoItemDTOInput" />

        <variable
                name="fragment"
                type="dev.vinicius.todoapp.ui.fragment.EditTodoFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.CreateTodoFragment">
        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl_edit_top_bar"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/mtb_edit_top_bar"
                    app:title="@string/txt_title_edit_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"/>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- TODO: Update blank fragment layout -->

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/abl_edit_top_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_label_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={todoItem.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_ti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_edit_ti_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_label_description">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={todoItem.description}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_show_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_end_date_label"
                app:startIconDrawable="@drawable/baseline_calendar_24"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_ti_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_edit_todo">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_show_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:onClick="@{fragment::setupDatePicker}"
                    android:text="@={todoItem.endDate}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_edit_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{fragment::saveTodo}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_label_confirm" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>