<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="todoItem"
                type="dev.vinicius.todoapp.domain.dto.TodoItemDTOInput" />

        <variable
                name="fragment"
                type="dev.vinicius.todoapp.ui.fragment.CreateTodoFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.CreateTodoFragment">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl_create_top_bar"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/mtb_create_top_bar"
                    app:title="@string/txt_title_create_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"/>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- TODO: Update blank fragment layout -->

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_create_ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/abl_create_top_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:errorEnabled="true"
                android:hint="@string/txt_label_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={todoItem.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_create_ti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_ti_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_label_description">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@={todoItem.description}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_create_todo_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_end_date_label"
                app:startIconDrawable="@drawable/baseline_calendar_24"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tv_create_ti_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/gl_create_todo">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_create_todo_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text="@={todoItem.endDate}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_create_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_create_add_sub_todo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="64dp"
                app:endIconDrawable="@drawable/ic_add_24dp"
                app:endIconMode="custom"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/backgroundColor"
                app:hintAnimationEnabled="false"
                android:hint="@string/txt_add_sub_task"
                app:layout_constraintTop_toBottomOf="@id/til_create_todo_end_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_create_sub_todo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/til_create_add_sub_todo"
                tools:listitem="@layout/sub_todo_list_item"

                />


<!--
        <androidx.fragment.app.FragmentContainerView
                android:name="dev.vinicius.todoapp.ui.fragment.SubTodoListFragment"
                android:id="@+id/fcv_create_todo_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/txt_show_date"
                app:layout_constraintBottom_toBottomOf="parent"

                />
-->
        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{fragment::saveTodo}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_label_confirm" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
